Added JNA for anonymous pipes, revised ProcessRunner.